# complexity

./: .gitignore  README.md  onestop.py  pyproject.toml
datasets/test/: dataset_a.npz  dataset_b.npz  dataset_c.npz  dataset_d.npz  dataset_e.npz
datasets/training/: dataset_a.npz  dataset_b.npz  dataset_c.npz  dataset_d.npz  dataset_e.npz
docs/: index.md
experiments/: check_nmf.ipynb  pyproject.toml
experiments/activation_traces/: README.txt
experiments/activation_traces/test/: a-a.npz  a-b.npz  a-c.npz  a-d.npz  a-e.npz  b-a.npz  b-b.npz  c-a.npz  c-c.npz  d-a.npz  d-d.npz  e-a.npz  e-e.npz
experiments/activation_traces/training/: dataset_a.npz  dataset_b.npz  dataset_c.npz  dataset_d.npz  dataset_e.npz
experiments/nmf_info/base_weight/: a.npz
experiments/pred_res/: a-a.npy  a-c.npy  a-d.npy  a-e.npy  b-a.npy  c-c.npy  d-d.npy  e-e.npy
experiments/results/: a-a.npz  a-b.npz  a-c.npz  a-d.npz  a-e.npz  a.npz  b-a.npz  b-b.npz  b.npz  c-a.npz  c-c.npz  c.npz  d-a.npz  d-d.npz  d.npz  e-a.npz  e-e.npz  e.npz
src/: get_at.py  make_cifar10_model.py  prepare_data.py  train_nmf.py
src/lib/: datagen.py
