[tool.poetry]
name = "complexity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.3.0"
tqdm = "^4.60.0"
matplotlib = "^3.4.1"
scikit-learn = "0.23.2"
opencv-python = "^4.5.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
